I added offset, limit, search to Author
